--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,30 @@
 .App {
-  text-align: center;
+  	text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+/* //////////////////////////////////////////////////////////////////////////////////////////// */
+/* //////////////////////////////////// Navigation (BELOW) //////////////////////////////////// */
+.nav {
+	display: flex;
+	flex-flow: row;
+	text-align: center;
+	justify-content: center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
-}
-
-
+	.nav .nav-time {
+		position: absolute;
+		right: 0;
+		margin: 10px 20px 0 0;
+	}
+	.nav .nav-item-container {}
+    	.nav .nav-item-container .nav-item {
+			all: unset;
+			font-weight: 800;
+			padding: 0 10px;
+			font-size: 30px;
+		}
+		.nav .nav-item-container .nav-item.center {
+			font-size:40px;
+		}
+/* //////////////////////////////////// Navigation (ABOVE) //////////////////////////////////// */
+/* //////////////////////////////////////////////////////////////////////////////////////////// */
+a {}
