work done on the menu items and description

--- a/src/App.css
+++ b/src/App.css
@@ -117,5 +117,20 @@ body {
 	justify-content: center;
 }
 
+.menu-category {
+	align-self: center;
+}
+
+.menu-item {
+	font-weight: 600;
+}
+
+.menu-item-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	
+}
+
 
 }
