changed menu container children from divs to spans

--- a/src/App.css
+++ b/src/App.css
@@ -126,9 +126,9 @@ body {
 }
 
 .menu-item-container {
-	display: flex;
+	/* display: flex;
 	flex-direction: row;
-	justify-content: space-between;
+	justify-content: space-between; */
 	
 }
 
