--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,76 @@
 		font-size: 30px;
 	}
 
+	/* Christina - Press Reviews */
+	.press-Reviews {
+		/* display: flex;
+		flex-flow: wrap;
+		justify-content: space-around;  */
+		display: grid;
+	}
+
+	.gridContainer {
+		display: grid;
+		grid-template-columns: auto auto;
+		grid-gap: 10px;
+		margin-left: 0px;
+	}
+
+	.fullReview {
+		margin-top: 10px;
+	}
+
+	.img {
+		height: 125px;
+		width: 125px; 
+		margin-top: 33px;
+		order: 1;
+		margin-left: 70px;
+	}
+
+	.review {
+		margin-left: 30px;
+		color: white;
+		max-width: 300px;
+		max-height: 72px;
+		overflow-wrap: break-word;
+		order: 2;
+		font-family: 'Gill Sans', sans-serif;
+		font-style: italic;
+		margin: 0;
+	}
+
+	.infatuationImg {
+		height: 240px;
+		width: 175px;
+		margin-top: -30px;
+		order: 1;
+	}
+
+	.infatuationP {
+		margin-left: 20px;
+	}
+
+	.timeOutImg {
+		width: 190px;
+		margin-right: 100px;
+		margin: 0;
+	}
+
+	.timeOutP {
+		margin-bottom: 20px;
+	}
+
+	.thrillistImg {
+		margin: 0;
+		margin-top: 5px;
+		margin-left: 20px;
+	}
+
+	.thrillist {
+		margin-top: -20px;
+	}
+
 /* ////////////////////////////////////////////////////////////////////////////////////// */
 /* //////////////////////////////////// Info (BELOW) //////////////////////////////////// */
 .info{
