--- a/src/App.css
+++ b/src/App.css
@@ -128,32 +128,31 @@
 		display: flex;
 		flex-direction: column;
 	}
-
 	.menu-list-title {
 		align-self: center;
 	}
-
 	.menu-list {
 		display: flex;
 		flex-direction: row;
 		justify-content: center;
 	}
-
 	.menu-category {
 		align-self: center;
 	}
-
-	.menu-item {
-		font-weight: 700;
-	}
-
 	.menu-item-container {
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
+		margin: 0 10px;
 	}
 		.menu-item-container .menu-item {
 			white-space: nowrap;
+			font-weight: 700;
+		}
+		.menu-item-container .description{
+			font-weight: 200;
+			font-style: italic;
+			margin: 0;
 		}
 		.menu-item-container .description, .menu-item-container .price {
 			width:100%
