--- a/src/App.css
+++ b/src/App.css
@@ -97,9 +97,168 @@ body {
 }
 
 .menu-image {
-	width: 10%;
-	height: 10%;
+	width: 80%;
+	height: 80%;
 	border-radius: 50%;
+}
+
+.menu-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+}
+
+.menu-list-title {
+	align-self: center;
+}
+
+.menu-list {
+	display: flex;
+	flex-direction: row;
+}
+
+.menu-category {
+	align-self: center;
+}
+
+.menu-item {
+	font-weight: 600;
+}
+
+.menu-item-container {
+	display: flex;
+	flex-direction: row;
+	
+}
+
+.menu-list-title, .menu-title {
+	color: white;
+}
+
+.menu-title-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
+
+menu-title {
+	justify-self: center;
+	align-self: center;
+}
+
+.menu {
+	display: flex;
+	flex-direction: column;
+	justify-items: center;
+	align-items: center;
+}
+
+}
+
+@media(min-width: 700px){
+	html,body
+	{
+		width: 100%;
+		height: 100%;
+		margin: 0px;
+		padding: 0px;
+		overflow-x: hidden; 
+	}
+
+   	body {
+		width: 100%;
+		background-image: url('./assets/images/Tomoe_Background_Final.jpg');
+		background-repeat: no-repeat;
+		background-size: cover;
+   	}
+
+   	.header {
+		background: url('../src/assets/images/Hero.jpg') center;
+		min-height: 188px;
+		background-repeat: no-repeat;
+		background-size: cover;
+   	}
+
+	.nav-item-container {
+		/* margin: 0; */
+		width: 100%;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-evenly;
+	}
+	.nav-item {
+		align-self: baseline;
+		text-decoration: none;
+		font-family: TrajanPro3;
+		font-size: 20px;
+		font-weight: 600;
+		line-height: normal;
+		/* letter-spacing: -0.01px; */
+		color: white;
+	}
+
+	.open-until {
+		width: 92.5%;
+		text-align: right;
+		color: white;
+	}
+
+
+	.center {
+		font-size: 30px;
+	}
+
+/* ////////////////////////////////////////////////////////////////////////////////////// */
+/* //////////////////////////////////// Info (BELOW) //////////////////////////////////// */
+.info{
+	color: wheat;
+	display: flex;
+	flex-flow: column;
+	align-items: center;
+}
+	.info .info-title {
+		font-size: 50px;
+	}
+	.info .location {
+		display: flex;
+		flex-flow: column;
+		align-items: center;
+	}
+		.info .location .address {
+			display: flex;
+			flex-flow: column;
+			align-items: center;
+		}
+	.info .week-schedule {
+		display: flex;
+		flex-flow: row;
+		justify-content: center;
+	}
+		.info .week-schedule .weekday-container {
+			margin: 30px 10px;
+			/* padding: 0 50px; */
+			color: wheat;
+			text-align: center;
+		}
+		.info .week-schedule .weekday-container.today {
+			color: red;
+		}
+			.info .week-schedule .weekday-container .open-close.now {
+				/* padding: 0 100px; */
+				font-weight: 900;
+			}
+/* //////////////////////////////////// Info (ABOVE) //////////////////////////////////// */
+/* ////////////////////////////////////////////////////////////////////////////////////// */
+body {
+	background-image: url("./assets/images/Tomoe_Background_Final.jpg");
+}
+
+.menu-image {
+	min-width: 80%;
+	min-height: 80%;
+	border-radius: 50%;
+
 }
 
 .menu-container {
@@ -134,3 +293,4 @@ body {
 
 
 }
+
