--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
 	.nav-item {
 		align-self: baseline;
 		text-decoration: none;
-		font-family: TrajanPro3;
+		font-family: 'TrajanPro3', sans-serif;
 		font-size: 20px;
 		font-weight: 600;
 		line-height: normal;
@@ -243,10 +243,6 @@
 		display: grid;
 	}
 
-	/* .pressTitle {
-		text-align: center;
-	} */
-
 	.gridContainer {
 		display: grid;
 		grid-template-columns: auto;
@@ -263,8 +259,6 @@
 	}
 
 	.img {
-		/* height: 156px;
-		width: 311px;  */
 		margin-top: 20px;
 		order: 1;
 		margin-left: 70px;
@@ -287,7 +281,6 @@
 	.infatuationImg {
 		height: 302px;
 		width: 511px;
-		/* margin-top: -30px; */
 		margin-left: -20px;
 		order: 1;
 	}
@@ -301,8 +294,6 @@
 		height: 117px;
 		width: 309px;
 		margin-top: 10px;
-		/* margin-right: 100px;
-		margin: 0; */
 	}
 
 	.timeOutP {
