--- a/src/App.css
+++ b/src/App.css
@@ -199,6 +199,7 @@
 		font-family: TrajanPro3;
 	}
 	.menu-title {
+		font-size: 16px;
 		color: white;
 		font-family: TrajanPro3;
 	}
@@ -211,6 +212,7 @@
 	.menu-container {
 		display: flex;
 		flex-direction: column;
+		margin: 30px;
 	}
 	.menu-list-title {
 		align-self: center;
