--- a/src/App.css
+++ b/src/App.css
@@ -214,6 +214,9 @@
 		flex-direction: column;
 		margin: 30px;
 	}
+	.menu-content {
+		background-color:rgba(0, 0, 0, .35);
+	}
 	.menu-list-title {
 		align-self: center;
 	}
@@ -230,6 +233,7 @@
 		flex-direction: row;
 		justify-content: space-between;
 		margin: 0 10px;
+
 	}
 		.menu-item-container .menu-item {
 			white-space: nowrap;
