--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Cinzel&display=swap');
+
 html, body {
 	width: 100%;
 	height: 100%;
@@ -10,6 +12,7 @@ body {
 	background-image: url('./assets/images/Tomoe_Background_Final.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
+	font-family: 'Cinzel', serif;
 }
 
 @media(min-width: 300px){
