--- a/src/App.css
+++ b/src/App.css
@@ -121,61 +121,58 @@ body {
 		.info .info-title {
 			font-size: 50px;
 		}
-		.info .location {
+		.info .info-content {
 			display: flex;
 			flex-flow: column;
-			align-items: center;
+			width: 100%;
+			justify-content: space-between;
 		}
-			.info .info-content {
+			.info .info-content .location {
 				display: flex;
-				flex-flow: row;
-				width: 100%;
-				justify-content: space-between;
+				flex-flow: column;
+				align-items: center;
+				margin: 30px 150px;
 			}
-				.info .info-content .location {
+				.info .info-content .location .address {
 					display: flex;
 					flex-flow: column;
 					align-items: center;
-					margin: 0 150px;
 				}
-					.info .info-content .location .address {
-						display: flex;
-						flex-flow: column;
-						align-items: center;
-					}
-				
-				.info .info-content .week-schedule {
+			.info .info-content .week-schedule {
+				display: flex;
+				flex-flow: column;
+				justify-content: center;
+				align-items: center;
+				width: 100%;
+				margin: auto;
+			}
+				.info .info-content .week-schedule .weekday-container {
 					display: flex;
-					flex-flow: column;
-					justify-content: center;
+					flex-flow: row;
+					/* margin: 5px 10px; */
+					/* padding: 0 50px; */
+					/* color: wheat; */
+					/* text-align: center; */
+					/* justify-content: space-between; */
 				}
-					.info .info-content .week-schedule .weekday-container {
-						display: flex;
-						flex-flow: row;
-						margin: 5px 10px;
-						/* padding: 0 50px; */
-						color: wheat;
-						text-align: center;
-						justify-content: space-between;
+				.info .info-content .week-schedule .weekday-container.today {
+					color: rgb(235, 146, 146);
+				}
+					.info .info-content .week-schedule .weekday-container .title {
+						/* width: 125px; */
+						/* text-align: right; */
+						/* margin: 0 10px; */
 					}
-					.info .info-content .week-schedule .weekday-container.today {
-						color: rgb(235, 146, 146);
+					.info .info-content .week-schedule .weekday-container .open-close-container {
+						/* display: flex; */
+						/* flex-flow: column; */
+						/* justify-content: left; */
+						/* text-align: left; */
 					}
-						.info .info-content .week-schedule .weekday-container .title {
-							width: 125px;
-							text-align: right;
-							margin: 0 10px;
+						.info .info-content .week-schedule .weekday-container .open-close-container .open-close.now {
+							/* padding: 0 100px; */
+							font-weight: 900;
 						}
-						.info .info-content .week-schedule .weekday-container .open-close-container {
-							display: flex;
-							flex-flow: column;
-							justify-content: left;
-							text-align: left;
-						}
-							.info .info-content .week-schedule .weekday-container .open-close-container .open-close.now {
-								/* padding: 0 100px; */
-								font-weight: 900;
-							}
 	/* //////////////////////////////////// Info (ABOVE) //////////////////////////////////// */
 	/* ////////////////////////////////////////////////////////////////////////////////////// */
 
@@ -226,13 +223,13 @@ body {
 			white-space: nowrap;
 			font-weight: 700;
 		}
+		.menu-item-container .description, .menu-item-container .price {
+			width:100%
+		}
 		.menu-item-container .description{
 			font-weight: 200;
 			font-style: italic;
 			margin: 0;
-		}
-		.menu-item-container .description, .menu-item-container .price {
-			width:100%
 		}
 		.menu-item-container .price{
 			text-align: right;
@@ -249,23 +246,6 @@ body {
    	.header {
 		min-height: 488px;
    	}
-	.nav-item-container {
-		/* margin: 0; */
-		width: 100%;
-		display: flex;
-		flex-direction: row;
-		justify-content: space-evenly;
-	}
-	.nav-item {
-		align-self: baseline;
-		text-decoration: none;
-		font-family: TrajanPro3;
-		font-size: 20px;
-		font-weight: 600;
-		line-height: normal;
-		/* letter-spacing: -0.01px; */
-		color: white;
-	}
 	
 	.menu-container {
 		justify-content: space-around;
@@ -299,9 +279,14 @@ body {
 
 	/* ////////////////////////////////////////////////////////////////////////////////////// */
 	/* //////////////////////////////////// Info (BELOW) //////////////////////////////////// */
-			.info .week-schedule .weekday-container {
-				margin: 30px 10px;
-			}
+	.info {}
+		.info .info-title {}
+		.info .info-content {}
+			.info .info-content .location {}
+			.info .info-content .week-schedule {}
+				.info .info-content .week-schedule .weekday-container {
+					/* margin: 30px 10px; */
+				}
 	/* //////////////////////////////////// Info (ABOVE) //////////////////////////////////// */
 	/* ////////////////////////////////////////////////////////////////////////////////////// */
 	
