--- a/src/App.css
+++ b/src/App.css
@@ -187,15 +187,20 @@ body {
 	}
 	.menu-title-container {
 		font-family: TrajanPro3;
+		color: white;
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-items: center;
 	}
 	.menu-title {
-		font-size: 16px;
 		color: white;
+		font-size: 16px;
 		font-family: TrajanPro3;
 	}
 	.menu-image {
 		width: 50%;
-		height: 65%;
+		height: 50%;
 		border-radius: 50%;
 	}
 
@@ -203,7 +208,6 @@ body {
 		display: flex;
 		flex-direction: column;
 		padding: 30px;
-		margin: 30px;
 	}
 	.menu-list-title {
 		align-self: center;
