--- a/src/App.css
+++ b/src/App.css
@@ -139,13 +139,14 @@ body {
 					display: flex;
 					flex-flow: column;
 					align-items: center;
+					margin: 10px 0 0 0;
 				}
 			.info .info-content .week-schedule {
 				display: flex;
 				flex-flow: column;
 				justify-content: center;
 				align-items: center;
-				width: 100%;
+				/* width: 100%; */
 				margin: auto;
 			}
 				.info .info-content .week-schedule .weekday-container {
@@ -164,15 +165,15 @@ body {
 					color: rgb(235, 146, 146);
 				}
 					.info .info-content .week-schedule .weekday-container .title {
-						width: 100%;
-						text-align: right;
-						margin: 0 10px;
+						/* width: 100%; */
+						text-align: left;
+						/* margin: 0 10px; */
 					}
 					.info .info-content .week-schedule .weekday-container .open-close-container {
 						display: flex;
 						flex-flow: column;
 						justify-content: left;
-						text-align: left;
+						text-align: right;
 						width: 100%;
 					}
 						.info .info-content .week-schedule .weekday-container .open-close-container .open-close.now {
