--- a/src/App.css
+++ b/src/App.css
@@ -225,6 +225,7 @@ body {
 	}
 	.menu-content {
 		background: rgba(0, 0, 0, .3);
+		margin: 15px auto auto auto;
 	}
 	.menu-item-container {
 		display: flex;
