--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ body {
 		display: grid;
 	}
 	.gridContainer {
-		display: grid;
+		display: column;
 		grid-template-columns: auto auto;
 		grid-gap: 10px;
 		margin-left: 0px;
@@ -83,27 +83,38 @@ body {
 	}
 	.infatuationImg {
 		width: 290px;
-		margin-top: -30px;
 		order: 1;
 	}
 	.infatuationP {
-		margin-left: 20px;
+		margin-bottom: 20px;
+		margin-left: 45px;
+		margin-top: 30px;
 	}
 	.timeOutImg {
 		width: 190px;
+		margin-top: 30px;
 		margin-right: 100px;
 		margin: 0;
+		margin-left: 45px;
 	}
 	.timeOutP {
 		margin-bottom: 20px;
+		margin-left: 45px;
+		margin-top: 30px;
+	}
+	.thrillistP {
+		margin-bottom: 20px;
+		margin-left: 30px;
+		margin-top: 30px;
 	}
 	.thrillistImg {
 		margin: 0;
-		margin-top: 5px;
-		margin-left: 20px;
+		margin:auto;
+		margin-left: 30px;
 		width: 190px;
 	}
 	.thrillist {
+		margin-top: 30px;
 		margin-top: -20px;
 		margin-left: 20px;
 	}
