--- a/src/App.css
+++ b/src/App.css
@@ -199,7 +199,7 @@ body {
 	}
 	.menu-title {
 		color: white;
-		font-size: 16px;
+		font-size: 10px;
 		font-family: TrajanPro3;
 	}
 	.menu-image {
@@ -227,6 +227,7 @@ body {
 	.menu-content {
 		background: rgba(0, 0, 0, .3);
 		margin: 15px auto auto auto;
+		font-size: 8px;
 	}
 	.menu-item-container {
 		display: flex;
@@ -269,7 +270,9 @@ body {
 	.menu-item {
 		font-weight: 600;
 	}
-
+	.menu-title {
+		font-size: 18px;
+	}
 	.menu-list-title, .menu-title {
 		color: white;
 		justify-self: center;
@@ -291,7 +294,9 @@ body {
 		min-width: 80%;
 		min-height: 80%;
 	}
-
+	.menu-content {
+		font-size: 16px;
+	}
 	/* ////////////////////////////////////////////////////////////////////////////////////// */
 	/* //////////////////////////////////// Info (BELOW) //////////////////////////////////// */
 	.info {}
