carousel styling changes

--- a/src/App.css
+++ b/src/App.css
@@ -127,10 +127,24 @@ body {
 	/* //////////////////////////////////// Press (ABOVE) /////////////////////////////////////// */
 	/* ///////////////////////////////////////////////////////////////////////////////////////// */
 
+		/* //////////////////////////////////// Gallery (BELOW) /////////////////////////////////////// */
+	/* ///////////////////////////////////////////////////////////////////////////////////////// */
+
+	.gallery-img{
+
+		width: auto; 
+		height: 100px; 
+		padding: 12px;
+
+	}
+
+	/* //////////////////////////////////// Gallery (ABOVE) /////////////////////////////////////// */
+	/* ///////////////////////////////////////////////////////////////////////////////////////// */
+
 	/* ////////////////////////////////////////////////////////////////////////////////////// */
 	/* //////////////////////////////////// Info (BELOW) //////////////////////////////////// */
 	.info {
-		color: wheat;
+		color: white;
 		display: flex;
 		flex-flow: column;
 		align-items: center;
@@ -335,6 +349,20 @@ body {
 					}
 	/* //////////////////////////////////// Info (ABOVE) //////////////////////////////////// */
 	/* ////////////////////////////////////////////////////////////////////////////////////// */
+
+			/* //////////////////////////////////// Gallery (BELOW) /////////////////////////////////////// */
+	/* ///////////////////////////////////////////////////////////////////////////////////////// */
+
+	.gallery-img{
+
+		width: auto; 
+		height: 10px; 
+		padding: 20px;
+
+	}
+
+	/* //////////////////////////////////// Gallery (ABOVE) /////////////////////////////////////// */
+	/* ///////////////////////////////////////////////////////////////////////////////////////// */
 	
 	/* /////////////////////////////////////   Christina  //////////////////////////////////// */
 	/* //////////////////////////////////// Press (BELOW) //////////////////////////////////// */
@@ -359,14 +387,13 @@ body {
 		font-size: 22px;
 	}
 	.infatuationImg {
-		height: 302px;
-		width: 511px;
-		margin-left: -20px;
-		order: 1;
+		margin-left: 70px;
+		height: auto;
+		width: 298px;
 	}
 	.infatuationP {
-		margin-left: -20px;
-		margin-top: 80px;
+		margin-left: 90px;
+		margin-top: 15px;
 	}
 	.timeOutImg {
 		width: 309px;
@@ -392,5 +419,20 @@ body {
 	}
 
 	/* //////////////////////////////////// Press (ABOVE) /////////////////////////////////////// */
+	/* ///////////////////////////////////////////////////////////////////////////////////////// */
+
+
+	/* //////////////////////////////////// Gallery (BELOW) /////////////////////////////////////// */
+	/* ///////////////////////////////////////////////////////////////////////////////////////// */
+
+	.gallery-img{
+
+		width: auto; 
+		height: 250px; 
+		padding: 20px;
+
+	}
+
+	/* //////////////////////////////////// Gallery (ABOVE) /////////////////////////////////////// */
 	/* ///////////////////////////////////////////////////////////////////////////////////////// */
 }
