--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,8 @@ html, body {
 	overflow-x: hidden; 
 }
 
+
+
 body {
 	background-image: url('./assets/images/Tomoe_Background_Final.jpg');
 	background-repeat: no-repeat;
@@ -34,7 +36,7 @@ body {
 	.nav-item {
 		align-self: baseline;
 		text-decoration: none;
-		font-family: 'TrajanPro3', sans-serif;
+		font-family: 'Cinzel', serif;
 		font-size: 15px;
 		font-weight: 600;
 		line-height: normal;
@@ -79,7 +81,7 @@ body {
 		color: white;
 		overflow-wrap: break-word;
 		order: 2;
-		font-family: 'Gill Sans', sans-serif;
+		font-family: 'Cinzel', serif;
 		font-style: italic;
 		margin: 0;
 	}
@@ -218,10 +220,10 @@ body {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		font-family: TrajanPro3;
+		font-family: 'Cinzel', serif;
 	}
 	.menu-title-container {
-		font-family: TrajanPro3;
+		font-family: 'Cinzel', serif;
 		color: white;
 		display: flex;
 		flex-direction: row;
@@ -231,11 +233,11 @@ body {
 	.menu-title {
 		color: white;
 		font-size: 14px;
-		font-family: TrajanPro3;
+		font-family: 'Cinzel', serif;
 	}
 	.menu-image {
 		width: 65%;
-		height: 65%;
+		height: auto;
 		border-radius: 50%;
 	}
 
@@ -261,6 +263,7 @@ body {
 		background: rgba(0, 0, 0, .3);
 		margin: 15px 0 0 0;
 		font-size: 8px;
+		margin-top:30px;
 	}
 	.menu-item-container {
 		display: flex;
@@ -284,14 +287,31 @@ body {
 			text-align: right;
 		}
 
+	
+}
+
+@media(min-width: 700px){
+
 	.close-button {
 		font-size: 42px;
 		color: gray;
 		cursor: pointer;
+		padding-top: 20px;
 	}
-}
 
-@media(min-width: 700px){
+	.nav-item {
+		align-self: baseline;
+		text-decoration: none;
+		font-family: 'Cinzel', serif;
+		font-size: 40px;
+		font-weight: 200;
+		line-height: normal;
+		/* letter-spacing: -0.01px; */
+		color: white;
+	}
+	.center {
+		font-size: 50px;
+	}
 
    	.header {
 		min-height: 488px;
