--- a/src/App.css
+++ b/src/App.css
@@ -43,9 +43,10 @@ body {
 	}
 
 	.open-until {
-		width: 92.5%;
-		text-align: right;
+		width: 100%;
+		text-align: center;
 		color: white;
+		font-size: 12px;
 	}
 
 	.center {
@@ -130,7 +131,7 @@ body {
 	/* ////////////////////////////////////////////////////////////////////////////////////// */
 	/* //////////////////////////////////// Info (BELOW) //////////////////////////////////// */
 	.info {
-		color: wheat;
+		color: white;
 		display: flex;
 		flex-flow: column;
 		align-items: center;
@@ -157,6 +158,12 @@ body {
 					align-items: center;
 					margin: 10px 0 0 0;
 				}
+			.info .info-content .info-right .address {
+				display: flex;
+				flex-flow: column;
+				align-items: center;
+				margin: 10px 0;
+			}
 			.info .info-content .week-schedule {
 				display: flex;
 				flex-flow: column;
@@ -278,7 +285,11 @@ body {
 }
 
 @media(min-width: 700px){
-
+	.open-until {
+		width: 92.5%;
+		text-align: right;
+		font-size: 18px;
+	}
    	.header {
 		min-height: 488px;
    	}
@@ -320,19 +331,41 @@ body {
 	/* //////////////////////////////////// Info (BELOW) //////////////////////////////////// */
 	.info {}
 		.info .info-title {}
-		.info .info-content {}
-			.info .info-content .location {}
-			.info .info-content .week-schedule {
-				width: 65%;
-				max-width: 650px;
+		.info .info-content {
+			flex-flow: row;
+		}
+			.info .info-content .location {
+				margin: 30px 0;
+				margin-left: 5%;
+				padding: 0;
 			}
-				.info .info-content .week-schedule .weekday-container {
-					margin: 2px 0;
-					font-size: 30px;
+			.info .info-content .info-right {
+				width: 100%;
+				/* max-width: 650px; */
+				margin: 25px 20px;
+				margin-right: 5%;
+			}
+				.info .info-content .info-right .address {
+					display: flex;
+					flex-flow: column;
+					justify-content: start;
+					align-items: flex-start;
+					margin: 10px 0;
 				}
-					.info .info-content .week-schedule .weekday-container .title, .info .info-content .week-schedule .weekday-container .open-close-container {
-						margin: 0 5%;
+				.info .info-content .info-right .week-schedule {
+					margin: 0;
+					border: none;
+					font-size: 25px;
+					max-width: none;
+					left: 0;
+					width: 100%;
+				}
+					.info .info-content .week-schedule .weekday-container {
+						margin: 2px 0;
 					}
+						.info .info-content .week-schedule .weekday-container .title, .info .info-content .week-schedule .weekday-container .open-close-container {
+							margin: 0;
+						}
 	/* //////////////////////////////////// Info (ABOVE) //////////////////////////////////// */
 	/* ////////////////////////////////////////////////////////////////////////////////////// */
 	
