media query for nav font size

--- a/src/App.css
+++ b/src/App.css
@@ -491,5 +491,14 @@ body {
 	}
 
 	/* //////////////////////////////////// Gallery (ABOVE) /////////////////////////////////////// */
-	/* ///////////////////////////////////////////////////////////////////////////////////////// */
+	/* //////////////////////////////////////////////////////////////////////////////////////////// */
+}
+
+@media(min-width: 1000px) {
+	.nav-item {
+		font-size: 30px;
+	}
+	.nav-item.center {
+		font-size: 40px;
+	}
 }
